Increased theme size on mobile and tablet; increased Sonja pic size; fixed mobile arr;

--- a/assets/styles/components/arrangement-banner/base.scss
+++ b/assets/styles/components/arrangement-banner/base.scss
@@ -17,9 +17,6 @@
   }
 
   &--content {
-    display: flex;
-    flex: 1 1 100%;
-    flex-direction: column;
     padding: abstracts.sizes-full(1rem, 1rem, 0);
   }
 
