--- a/assets/styles/layout/footer/contact.scss
+++ b/assets/styles/layout/footer/contact.scss
@@ -36,8 +36,8 @@
 
       img {
         border-radius: 50%;
-        width: 200px;
-        height: 200px;
+        width: 150px;
+        height: 150px;
       }
     }
   }
