--- a/assets/styles/pages/home/themes.scss
+++ b/assets/styles/pages/home/themes.scss
@@ -16,7 +16,7 @@
 
   .card--theme {
     flex: 1 1 100%;
-    min-height: 180px;
+    min-height: 250px;
     background-color: abstracts.get-color('green');
     padding: abstracts.sizes-full(1rem);
     color: abstracts.get-color('white');
